package commands;

public class ExecuteScript extends Command {
    
    public ExecuteScript() {
        super("execute_script <file_name>", "исполнить скрипт из указанного файла");
    }
}
