package runtime;

public abstract class Runtime {
    public abstract void run(String... args);
}
