package util;

public enum Status {
    OK,
    ERROR,
    EXIT,
    INPUT;
}
