package util;

public interface Validatable {
    boolean validate();
}
